// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Switch demo -- checked 1`] = `
.c2 {
  position: relative;
  height: 100%;
  width: 100%;
  border-radius: 2px;
  box-sizing: border-box;
}

.c4 {
  width: 100%;
  height: 100%;
  text-align: center;
  line-height: 22px;
  box-sizing: border-box;
  display: block;
}

.c7 {
  position: absolute;
  display: inline-block;
  left: -1px;
  top: -2px;
  border-radius: 2px;
  box-sizing: border-box;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c9 {
  position: absolute;
  display: inline-block;
  left: 18px;
  top: 4px;
  width: 2px;
  height: 16px;
  border-radius: 1px;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c0 {
  position: relative;
  border-radius: 2px;
  overflow: hidden;
  box-sizing: border-box;
  cursor: pointer;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  background: #fff;
  height: 28px;
  width: 80px;
  padding: 4px;
  border: 1px solid #c3cad9;
  border-width: 1px;
  line-height: 16px;
}

.c0:hover {
  border-color: #3555f6;
}

.c0 .c6 {
  background-color: #fff;
  box-shadow: 0 0.5px 0.5px #c3cad9;
  border: 1px solid #c3cad9;
  width: 20px;
  height: 20px;
}

.c0 .c8 {
  background-color: #e69b9b;
  left: 13px;
  height: 10px;
}

.c0 .c1 {
  border: 1px solid #c3cad9;
  background-color: #ebedf0;
  color: #6b798e;
}

.c0 .c3,
.c0 .c5 {
  line-height: 16px;
}

.c0 .c3 {
  padding-right: 20px;
}

.c0 .c5 {
  padding-left: 20px;
}

.c0 .c1 {
  border-color: #9fecc0;
  background-color: #c3f3d8;
  color: #5cd78e;
}

.c0 .c6 {
  left: 100%;
  margin-left: -19px;
}

.c0 .c8 {
  background: #9fecc0;
}

.c0 .c5 {
  display: none;
}

.c10 {
  position: relative;
  border-radius: 2px;
  overflow: hidden;
  box-sizing: border-box;
  cursor: pointer;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  background: #fff;
  height: 28px;
  width: 80px;
  padding: 4px;
  border: 1px solid #c3cad9;
  border-width: 1px;
  line-height: 16px;
}

.c10:hover {
  border-color: #3555f6;
}

.c10 .c6 {
  background-color: #fff;
  box-shadow: 0 0.5px 0.5px #c3cad9;
  border: 1px solid #c3cad9;
  width: 20px;
  height: 20px;
}

.c10 .c8 {
  background-color: #e69b9b;
  left: 13px;
  height: 10px;
}

.c10 .c1 {
  border: 1px solid #c3cad9;
  background-color: #ebedf0;
  color: #6b798e;
}

.c10 .c3,
.c10 .c5 {
  line-height: 16px;
}

.c10 .c3 {
  padding-right: 20px;
}

.c10 .c5 {
  padding-left: 20px;
}

.c10 .c3 {
  display: none;
}

<div>
  <div
    class="demo-wrap"
  >
    <div
      checked=""
      class="c0"
    >
      <div
        class="c1 c2"
      >
        <span
          class="c3 c4"
        >
          ON
        </span>
        <span
          class="c5 c4"
        >
          OFF
        </span>
        <span
          class="c6 c7"
        >
          <span
            class="c8 c9"
          />
        </span>
      </div>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="c10"
    >
      <div
        class="c1 c2"
      >
        <span
          class="c3 c4"
        >
          ON
        </span>
        <span
          class="c5 c4"
        >
          OFF
        </span>
        <span
          class="c6 c7"
        >
          <span
            class="c8 c9"
          />
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Switch demo -- disabled 1`] = `
.c2 {
  position: relative;
  height: 100%;
  width: 100%;
  border-radius: 2px;
  box-sizing: border-box;
}

.c4 {
  width: 100%;
  height: 100%;
  text-align: center;
  line-height: 22px;
  box-sizing: border-box;
  display: block;
}

.c7 {
  position: absolute;
  display: inline-block;
  left: -1px;
  top: -2px;
  border-radius: 2px;
  box-sizing: border-box;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c9 {
  position: absolute;
  display: inline-block;
  left: 18px;
  top: 4px;
  width: 2px;
  height: 16px;
  border-radius: 1px;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c11 .c6 {
  background-color: #fff;
  box-shadow: 0 0.5px 0.5px #c3cad9;
  border: 1px solid #c3cad9;
  width: 20px;
  height: 20px;
}

.c11 .c8 {
  background-color: #e69b9b;
  left: 13px;
  height: 10px;
}

.c11 .c1 {
  border: 1px solid #c3cad9;
  background-color: #ebedf0;
  color: #6b798e;
}

.c11 .c3,
.c11 .c5 {
  line-height: 16px;
}

.c11 .c3 {
  padding-right: 20px;
}

.c11 .c5 {
  padding-left: 20px;
}

.c11 .c1 {
  border-color: #9fecc0;
  background-color: #c3f3d8;
  color: #5cd78e;
}

.c11 .c6 {
  left: 100%;
  margin-left: -19px;
}

.c11 .c8 {
  background: #9fecc0;
}

.c11 .c5 {
  display: none;
}

.c0 {
  position: relative;
  border-radius: 2px;
  overflow: hidden;
  box-sizing: border-box;
  cursor: pointer;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  background: #fff;
  height: 28px;
  width: 80px;
  padding: 4px;
  border: 1px solid #c3cad9;
  border-width: 1px;
  line-height: 16px;
}

.c0:hover {
  border-color: #3555f6;
}

.c0 .c6 {
  background-color: #fff;
  box-shadow: 0 0.5px 0.5px #c3cad9;
  border: 1px solid #c3cad9;
  width: 20px;
  height: 20px;
}

.c0 .c8 {
  background-color: #e69b9b;
  left: 13px;
  height: 10px;
}

.c0 .c1 {
  border: 1px solid #c3cad9;
  background-color: #ebedf0;
  color: #6b798e;
}

.c0 .c3,
.c0 .c5 {
  line-height: 16px;
}

.c0 .c3 {
  padding-right: 20px;
}

.c0 .c5 {
  padding-left: 20px;
}

.c0 .c3 {
  display: none;
}

.c10 {
  position: relative;
  border-radius: 2px;
  overflow: hidden;
  box-sizing: border-box;
  cursor: pointer;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  background: #fff;
  height: 28px;
  width: 80px;
  padding: 4px;
  border: 1px solid #c3cad9;
  border-width: 1px;
  line-height: 16px;
  border-color: #d9d9d9;
  cursor: not-allowed;
}

.c10:hover {
  border-color: #3555f6;
}

.c10 .c6 {
  background-color: #fff;
  box-shadow: 0 0.5px 0.5px #c3cad9;
  border: 1px solid #c3cad9;
  width: 20px;
  height: 20px;
}

.c10 .c8 {
  background-color: #e69b9b;
  left: 13px;
  height: 10px;
}

.c10 .c1 {
  border: 1px solid #c3cad9;
  background-color: #ebedf0;
  color: #6b798e;
}

.c10 .c3,
.c10 .c5 {
  line-height: 16px;
}

.c10 .c3 {
  padding-right: 20px;
}

.c10 .c5 {
  padding-left: 20px;
}

.c10 .c3 {
  display: none;
}

.c10 .c1 {
  border-color: #f7f7f7;
  background-color: #f7f7f7;
}

.c10 .c8 {
  background-color: #f7f7f7;
}

<div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <div
        class="c1 c2"
      >
        <span
          class="c3 c4"
        >
          ON
        </span>
        <span
          class="c5 c4"
        >
          OFF
        </span>
        <span
          class="c6 c7"
        >
          <span
            class="c8 c9"
          />
        </span>
      </div>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="c10"
      disabled=""
    >
      <div
        class="c1 c2"
      >
        <span
          class="c3 c4"
        >
          ON
        </span>
        <span
          class="c5 c4"
        >
          OFF
        </span>
        <span
          class="c6 c7"
        >
          <span
            class="c8 c9"
          />
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Switch demo -- onTextAndOffText 1`] = `
.c2 {
  position: relative;
  height: 100%;
  width: 100%;
  border-radius: 2px;
  box-sizing: border-box;
}

.c4 {
  width: 100%;
  height: 100%;
  text-align: center;
  line-height: 22px;
  box-sizing: border-box;
  display: block;
}

.c7 {
  position: absolute;
  display: inline-block;
  left: -1px;
  top: -2px;
  border-radius: 2px;
  box-sizing: border-box;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c9 {
  position: absolute;
  display: inline-block;
  left: 18px;
  top: 4px;
  width: 2px;
  height: 16px;
  border-radius: 1px;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c10 .c6 {
  background-color: #fff;
  box-shadow: 0 0.5px 0.5px #c3cad9;
  border: 1px solid #c3cad9;
  width: 20px;
  height: 20px;
}

.c10 .c8 {
  background-color: #e69b9b;
  left: 13px;
  height: 10px;
}

.c10 .c1 {
  border: 1px solid #c3cad9;
  background-color: #ebedf0;
  color: #6b798e;
}

.c10 .c3,
.c10 .c5 {
  line-height: 16px;
}

.c10 .c3 {
  padding-right: 20px;
}

.c10 .c5 {
  padding-left: 20px;
}

.c10 .c1 {
  border-color: #9fecc0;
  background-color: #c3f3d8;
  color: #5cd78e;
}

.c10 .c6 {
  left: 100%;
  margin-left: -19px;
}

.c10 .c8 {
  background: #9fecc0;
}

.c10 .c5 {
  display: none;
}

.c0 {
  position: relative;
  border-radius: 2px;
  overflow: hidden;
  box-sizing: border-box;
  cursor: pointer;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  background: #fff;
  height: 28px;
  width: 80px;
  padding: 4px;
  border: 1px solid #c3cad9;
  border-width: 1px;
  line-height: 16px;
}

.c0:hover {
  border-color: #3555f6;
}

.c0 .c6 {
  background-color: #fff;
  box-shadow: 0 0.5px 0.5px #c3cad9;
  border: 1px solid #c3cad9;
  width: 20px;
  height: 20px;
}

.c0 .c8 {
  background-color: #e69b9b;
  left: 13px;
  height: 10px;
}

.c0 .c1 {
  border: 1px solid #c3cad9;
  background-color: #ebedf0;
  color: #6b798e;
}

.c0 .c3,
.c0 .c5 {
  line-height: 16px;
}

.c0 .c3 {
  padding-right: 20px;
}

.c0 .c5 {
  padding-left: 20px;
}

.c0 .c3 {
  display: none;
}

.c11 .c6 {
  background-color: #fff;
  box-shadow: 0 0.5px 0.5px #c3cad9;
  border: 1px solid #c3cad9;
  width: 20px;
  height: 20px;
}

.c11 .c8 {
  background-color: #e69b9b;
  left: 13px;
  height: 10px;
}

.c11 .c1 {
  border: 1px solid #c3cad9;
  background-color: #ebedf0;
  color: #6b798e;
}

.c11 .c3,
.c11 .c5 {
  line-height: 16px;
}

.c11 .c3 {
  padding-right: 20px;
}

.c11 .c5 {
  padding-left: 20px;
}

.c11 .c3 {
  display: none;
}

.c11 .c1 {
  border-color: #f7f7f7;
  background-color: #f7f7f7;
}

.c11 .c8 {
  background-color: #f7f7f7;
}

<div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <div
        class="c1 c2"
      >
        <span
          class="c3 c4"
        >
          ON
        </span>
        <span
          class="c5 c4"
        >
          OFF
        </span>
        <span
          class="c6 c7"
        >
          <span
            class="c8 c9"
          />
        </span>
      </div>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <div
        class="c1 c2"
      >
        <span
          class="c3 c4"
        >
          开
        </span>
        <span
          class="c5 c4"
        >
          关
        </span>
        <span
          class="c6 c7"
        >
          <span
            class="c8 c9"
          />
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Switch demo -- size 1`] = `
.c2 {
  position: relative;
  height: 100%;
  width: 100%;
  border-radius: 2px;
  box-sizing: border-box;
}

.c4 {
  width: 100%;
  height: 100%;
  text-align: center;
  line-height: 22px;
  box-sizing: border-box;
  display: block;
}

.c7 {
  position: absolute;
  display: inline-block;
  left: -1px;
  top: -2px;
  border-radius: 2px;
  box-sizing: border-box;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c9 {
  position: absolute;
  display: inline-block;
  left: 18px;
  top: 4px;
  width: 2px;
  height: 16px;
  border-radius: 1px;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c12 .c6 {
  background-color: #fff;
  box-shadow: 0 0.5px 0.5px #c3cad9;
  border: 1px solid #c3cad9;
  width: 20px;
  height: 20px;
}

.c12 .c8 {
  background-color: #e69b9b;
  left: 13px;
  height: 10px;
}

.c12 .c1 {
  border: 1px solid #c3cad9;
  background-color: #ebedf0;
  color: #6b798e;
}

.c12 .c3,
.c12 .c5 {
  line-height: 16px;
}

.c12 .c3 {
  padding-right: 20px;
}

.c12 .c5 {
  padding-left: 20px;
}

.c12 .c1 {
  border-color: #9fecc0;
  background-color: #c3f3d8;
  color: #5cd78e;
}

.c12 .c6 {
  left: 100%;
  margin-left: -19px;
}

.c12 .c8 {
  background: #9fecc0;
}

.c12 .c5 {
  display: none;
}

.c10 {
  position: relative;
  border-radius: 2px;
  overflow: hidden;
  box-sizing: border-box;
  cursor: pointer;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  background: #fff;
  height: 28px;
  width: 80px;
  padding: 4px;
  border: 1px solid #c3cad9;
  border-width: 1px;
  line-height: 16px;
}

.c10:hover {
  border-color: #3555f6;
}

.c10 .c6 {
  background-color: #fff;
  box-shadow: 0 0.5px 0.5px #c3cad9;
  border: 1px solid #c3cad9;
  width: 20px;
  height: 20px;
}

.c10 .c8 {
  background-color: #e69b9b;
  left: 13px;
  height: 10px;
}

.c10 .c1 {
  border: 1px solid #c3cad9;
  background-color: #ebedf0;
  color: #6b798e;
}

.c10 .c3,
.c10 .c5 {
  line-height: 16px;
}

.c10 .c3 {
  padding-right: 20px;
}

.c10 .c5 {
  padding-left: 20px;
}

.c10 .c3 {
  display: none;
}

.c13 .c6 {
  background-color: #fff;
  box-shadow: 0 0.5px 0.5px #c3cad9;
  border: 1px solid #c3cad9;
  width: 20px;
  height: 20px;
}

.c13 .c8 {
  background-color: #e69b9b;
  left: 13px;
  height: 10px;
}

.c13 .c1 {
  border: 1px solid #c3cad9;
  background-color: #ebedf0;
  color: #6b798e;
}

.c13 .c3,
.c13 .c5 {
  line-height: 16px;
}

.c13 .c3 {
  padding-right: 20px;
}

.c13 .c5 {
  padding-left: 20px;
}

.c13 .c3 {
  display: none;
}

.c13 .c1 {
  border-color: #f7f7f7;
  background-color: #f7f7f7;
}

.c13 .c8 {
  background-color: #f7f7f7;
}

.c0 {
  position: relative;
  border-radius: 2px;
  overflow: hidden;
  box-sizing: border-box;
  cursor: pointer;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  background: #fff;
  height: 24px;
  width: 45px;
  padding: 1px;
  border: 1px solid #c3cad9;
  border-width: 0;
}

.c0:hover {
  border-color: #3555f6;
}

.c0 .c6 {
  background-color: #fff;
  box-shadow: 0 0.5px 0.5px #c3cad9;
  border: 1px solid #c3cad9;
  width: 24px;
  height: 24px;
}

.c0 .c8 {
  background-color: #e69b9b;
  left: 13px;
  height: 14px;
}

.c0 .c1 {
  border: 1px solid #c3cad9;
  background-color: #ebedf0;
  color: #6b798e;
}

.c0 .c3,
.c0 .c5 {
  display: none;
}

.c0 .c3 {
  display: none;
}

.c11 {
  position: relative;
  border-radius: 2px;
  overflow: hidden;
  box-sizing: border-box;
  cursor: pointer;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  background: #fff;
  height: 32px;
  width: 100px;
  padding: 4px;
  border: 1px solid #c3cad9;
  border-width: 1px;
  line-height: 22px;
}

.c11:hover {
  border-color: #3555f6;
}

.c11 .c6 {
  background-color: #fff;
  box-shadow: 0 0.5px 0.5px #c3cad9;
  border: 1px solid #c3cad9;
  width: 24px;
  height: 24px;
}

.c11 .c8 {
  background-color: #e69b9b;
  left: 18px;
  height: 14px;
}

.c11 .c1 {
  border: 1px solid #c3cad9;
  background-color: #ebedf0;
  color: #6b798e;
}

.c11 .c3 {
  padding-right: 26px;
}

.c11 .c5 {
  padding-left: 26px;
}

.c11 .c3 {
  display: none;
}

<div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <div
        class="c1 c2"
      >
        <span
          class="c3 c4"
        >
          ON
        </span>
        <span
          class="c5 c4"
        >
          OFF
        </span>
        <span
          class="c6 c7"
        >
          <span
            class="c8 c9"
          />
        </span>
      </div>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="c10"
    >
      <div
        class="c1 c2"
      >
        <span
          class="c3 c4"
        >
          ON
        </span>
        <span
          class="c5 c4"
        >
          OFF
        </span>
        <span
          class="c6 c7"
        >
          <span
            class="c8 c9"
          />
        </span>
      </div>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="c11"
    >
      <div
        class="c1 c2"
      >
        <span
          class="c3 c4"
        >
          ON
        </span>
        <span
          class="c5 c4"
        >
          OFF
        </span>
        <span
          class="c6 c7"
        >
          <span
            class="c8 c9"
          />
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Switch demo -- switch 1`] = `
.c16 {
  position: relative;
  height: 100%;
  width: 100%;
  border-radius: 2px;
  box-sizing: border-box;
}

.c18 {
  width: 100%;
  height: 100%;
  text-align: center;
  line-height: 22px;
  box-sizing: border-box;
  display: block;
}

.c21 {
  position: absolute;
  display: inline-block;
  left: -1px;
  top: -2px;
  border-radius: 2px;
  box-sizing: border-box;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c23 {
  position: absolute;
  display: inline-block;
  left: 18px;
  top: 4px;
  width: 2px;
  height: 16px;
  border-radius: 1px;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c24 {
  position: relative;
  border-radius: 2px;
  overflow: hidden;
  box-sizing: border-box;
  cursor: pointer;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  background: #fff;
  height: 28px;
  width: 80px;
  padding: 4px;
  border: 1px solid #c3cad9;
  border-width: 1px;
  line-height: 16px;
}

.c24:hover {
  border-color: #3555f6;
}

.c24 .c20 {
  background-color: #fff;
  box-shadow: 0 0.5px 0.5px #c3cad9;
  border: 1px solid #c3cad9;
  width: 20px;
  height: 20px;
}

.c24 .c22 {
  background-color: #e69b9b;
  left: 13px;
  height: 10px;
}

.c24 .c15 {
  border: 1px solid #c3cad9;
  background-color: #ebedf0;
  color: #6b798e;
}

.c24 .c17,
.c24 .c19 {
  line-height: 16px;
}

.c24 .c17 {
  padding-right: 20px;
}

.c24 .c19 {
  padding-left: 20px;
}

.c24 .c15 {
  border-color: #9fecc0;
  background-color: #c3f3d8;
  color: #5cd78e;
}

.c24 .c20 {
  left: 100%;
  margin-left: -19px;
}

.c24 .c22 {
  background: #9fecc0;
}

.c24 .c19 {
  display: none;
}

.c14 {
  position: relative;
  border-radius: 2px;
  overflow: hidden;
  box-sizing: border-box;
  cursor: pointer;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  background: #fff;
  height: 28px;
  width: 80px;
  padding: 4px;
  border: 1px solid #c3cad9;
  border-width: 1px;
  line-height: 16px;
}

.c14:hover {
  border-color: #3555f6;
}

.c14 .c20 {
  background-color: #fff;
  box-shadow: 0 0.5px 0.5px #c3cad9;
  border: 1px solid #c3cad9;
  width: 20px;
  height: 20px;
}

.c14 .c22 {
  background-color: #e69b9b;
  left: 13px;
  height: 10px;
}

.c14 .c15 {
  border: 1px solid #c3cad9;
  background-color: #ebedf0;
  color: #6b798e;
}

.c14 .c17,
.c14 .c19 {
  line-height: 16px;
}

.c14 .c17 {
  padding-right: 20px;
}

.c14 .c19 {
  padding-left: 20px;
}

.c14 .c17 {
  display: none;
}

.c27 .c20 {
  background-color: #fff;
  box-shadow: 0 0.5px 0.5px #c3cad9;
  border: 1px solid #c3cad9;
  width: 20px;
  height: 20px;
}

.c27 .c22 {
  background-color: #e69b9b;
  left: 13px;
  height: 10px;
}

.c27 .c15 {
  border: 1px solid #c3cad9;
  background-color: #ebedf0;
  color: #6b798e;
}

.c27 .c17,
.c27 .c19 {
  line-height: 16px;
}

.c27 .c17 {
  padding-right: 20px;
}

.c27 .c19 {
  padding-left: 20px;
}

.c27 .c17 {
  display: none;
}

.c27 .c15 {
  border-color: #f7f7f7;
  background-color: #f7f7f7;
}

.c27 .c22 {
  background-color: #f7f7f7;
}

.c28 .c20 {
  background-color: #fff;
  box-shadow: 0 0.5px 0.5px #c3cad9;
  border: 1px solid #c3cad9;
  width: 24px;
  height: 24px;
}

.c28 .c22 {
  background-color: #e69b9b;
  left: 13px;
  height: 14px;
}

.c28 .c15 {
  border: 1px solid #c3cad9;
  background-color: #ebedf0;
  color: #6b798e;
}

.c28 .c17,
.c28 .c19 {
  display: none;
}

.c28 .c17 {
  display: none;
}

.c29 .c20 {
  background-color: #fff;
  box-shadow: 0 0.5px 0.5px #c3cad9;
  border: 1px solid #c3cad9;
  width: 24px;
  height: 24px;
}

.c29 .c22 {
  background-color: #e69b9b;
  left: 18px;
  height: 14px;
}

.c29 .c15 {
  border: 1px solid #c3cad9;
  background-color: #ebedf0;
  color: #6b798e;
}

.c29 .c17 {
  padding-right: 26px;
}

.c29 .c19 {
  padding-left: 26px;
}

.c29 .c17 {
  display: none;
}

.c12 {
  vertical-align: baseline;
}

.c11 {
  margin-right: 8px;
  font-size: 14px;
}

.c9 {
  color: #6b798e;
  font-size: 12px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
}

.c13 {
  color: #6b798e;
  font-size: 12px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
}

.c13 .c10 {
  color: #3555f6;
}

.c7 {
  position: relative;
  margin-bottom: -8px;
}

.c7 .c8,
.c7 .style__RadioTagWrap-sc-25j3mq-3 {
  margin-right: 8px;
  margin-bottom: 8px;
}

.c7 .c8:last-child,
.c7 .style__RadioTagWrap-sc-25j3mq-3:last-child {
  margin-right: 0;
}

.c7 .c31 {
  margin-right: 12px;
  margin-bottom: 8px;
}

.c7 .c31:last-child {
  margin-right: 0;
}

.c7 .c32+.c32 {
  margin-left: -1px;
}

.c7 .c30 {
  margin-right: -1px;
  margin-bottom: 8px;
}

.c7 .c30:first-child {
  border-radius: 2px 0 0 2px;
}

.c7 .c30:last-child {
  border-radius: 0 2px 2px 0;
  margin-right: 0;
}

.c5 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 25%;
}

.c6 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 75%;
}

.c2 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.c2:before,
.c2:after {
  content: ' ';
  display: table;
}

.c2:after {
  clear: both;
}

.c2 .c4 {
  padding-left: 8px;
  padding-right: 8px;
}

.c3 {
  padding-top: 4px;
  line-height: 20px;
  word-break: break-all;
}

.c0 .c1 {
  margin-bottom: 16px;
}

.c0 .c1:last-child {
  margin-bottom: 0;
}

.c26 {
  display: table;
  width: 100%;
}

.c25 {
  position: relative;
  display: inline-block;
  vertical-align: middle;
  box-sizing: border-box;
  border-radius: 2px;
  color: #0a1633;
  border: 1px solid #dfe0f1;
  background: #fafafc;
  height: 28px;
  box-shadow: inset 0 1px 3px 0 #dedeef,inset 0 0px 2px 0 #f6f6fb;
  -webkit-transition: .18s cubic-bezier(.4,0,.2,1);
  transition: .18s cubic-bezier(.4,0,.2,1);
}

.c25 input {
  vertical-align: middle;
  display: table-cell;
  box-sizing: border-box;
  width: 100%;
  padding: 0px 8px;
  margin: 0;
  font-size: inherit;
  color: inherit;
}

.c25 input,
.c25 input:hover,
.c25 input:focus {
  border: none;
  outline: none;
  background: none;
}

.c25:hover {
  border-color: #c3cad9;
  background-color: #f6f6fb;
}

.c25 input {
  line-height: 26px;
  height: 26px;
}

.c25 input::-webkit-input-placeholder {
  color: #abb4c3;
}

.c25 input::-moz-placeholder {
  color: #abb4c3;
}

.c25 input:-ms-input-placeholder {
  color: #abb4c3;
}

.c25 input::placeholder {
  color: #abb4c3;
}

<div>
  <form
    class="demo-form uc-fe-form c0"
  >
    <div
      class="c1 uc-fe-form-item uc-fe-row c2"
    >
      <div
        class="uc-fe-form-label c3 c4 uc-fe-col c5"
        span="3"
      >
        size
      </div>
      <div
        class="uc-fe-form-controller c4 uc-fe-col c6"
        span="9"
      >
        <div
          class="c7"
        >
          <div
            class="c8 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c9"
          >
            <i
              class="c10 c11 uc-fe-icon icon__circle c12"
              type="circle"
            />
            sm
          </div>
          <div
            checked=""
            class="c8 uc-fe-radio uc-fe-radio-checked uc-fe-radio-size-md uc-fe-radio-styletype-default c13"
          >
            <i
              class="c10 c11 uc-fe-icon icon__cbox-ed c12"
              type="cbox-ed"
            />
            md
          </div>
          <div
            class="c8 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c9"
          >
            <i
              class="c10 c11 uc-fe-icon icon__circle c12"
              type="circle"
            />
            lg
          </div>
        </div>
      </div>
    </div>
    <div
      class="c1 uc-fe-form-item uc-fe-row c2"
    >
      <div
        class="uc-fe-form-label c3 c4 uc-fe-col c5"
        span="3"
      >
        disabled
      </div>
      <div
        class="uc-fe-form-controller c4 uc-fe-col c6"
        span="9"
      >
        <div
          class="c14"
        >
          <div
            class="c15 c16"
          >
            <span
              class="c17 c18"
            >
              ON
            </span>
            <span
              class="c19 c18"
            >
              OFF
            </span>
            <span
              class="c20 c21"
            >
              <span
                class="c22 c23"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c1 uc-fe-form-item uc-fe-row c2"
    >
      <div
        class="uc-fe-form-label c3 c4 uc-fe-col c5"
        span="3"
      >
        checked
      </div>
      <div
        class="uc-fe-form-controller c4 uc-fe-col c6"
        span="9"
      >
        <div
          checked=""
          class="c24"
        >
          <div
            class="c15 c16"
          >
            <span
              class="c17 c18"
            >
              ON
            </span>
            <span
              class="c19 c18"
            >
              OFF
            </span>
            <span
              class="c20 c21"
            >
              <span
                class="c22 c23"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c1 uc-fe-form-item uc-fe-row c2"
    >
      <div
        class="uc-fe-form-label c3 c4 uc-fe-col c5"
        span="3"
      >
        onText
      </div>
      <div
        class="uc-fe-form-controller c4 uc-fe-col c6"
        span="9"
      >
        <span
          class="uc-fe-input c25"
        >
          <span
            class="c26"
          >
            <input
              value="ON"
            />
          </span>
        </span>
      </div>
    </div>
    <div
      class="c1 uc-fe-form-item uc-fe-row c2"
    >
      <div
        class="uc-fe-form-label c3 c4 uc-fe-col c5"
        span="3"
      >
        offText
      </div>
      <div
        class="uc-fe-form-controller c4 uc-fe-col c6"
        span="9"
      >
        <span
          class="uc-fe-input c25"
        >
          <span
            class="c26"
          >
            <input
              value="OFF"
            />
          </span>
        </span>
      </div>
    </div>
  </form>
  <div
    class="demo-wrap"
  >
    <div
      checked=""
      class="c24"
    >
      <div
        class="c15 c16"
      >
        <span
          class="c17 c18"
        >
          ON
        </span>
        <span
          class="c19 c18"
        >
          OFF
        </span>
        <span
          class="c20 c21"
        >
          <span
            class="c22 c23"
          />
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Switch demo -- uncontrolled 1`] = `
.c2 {
  position: relative;
  height: 100%;
  width: 100%;
  border-radius: 2px;
  box-sizing: border-box;
}

.c4 {
  width: 100%;
  height: 100%;
  text-align: center;
  line-height: 22px;
  box-sizing: border-box;
  display: block;
}

.c7 {
  position: absolute;
  display: inline-block;
  left: -1px;
  top: -2px;
  border-radius: 2px;
  box-sizing: border-box;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c9 {
  position: absolute;
  display: inline-block;
  left: 18px;
  top: 4px;
  width: 2px;
  height: 16px;
  border-radius: 1px;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c0 {
  position: relative;
  border-radius: 2px;
  overflow: hidden;
  box-sizing: border-box;
  cursor: pointer;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  background: #fff;
  height: 28px;
  width: 80px;
  padding: 4px;
  border: 1px solid #c3cad9;
  border-width: 1px;
  line-height: 16px;
}

.c0:hover {
  border-color: #3555f6;
}

.c0 .c6 {
  background-color: #fff;
  box-shadow: 0 0.5px 0.5px #c3cad9;
  border: 1px solid #c3cad9;
  width: 20px;
  height: 20px;
}

.c0 .c8 {
  background-color: #e69b9b;
  left: 13px;
  height: 10px;
}

.c0 .c1 {
  border: 1px solid #c3cad9;
  background-color: #ebedf0;
  color: #6b798e;
}

.c0 .c3,
.c0 .c5 {
  line-height: 16px;
}

.c0 .c3 {
  padding-right: 20px;
}

.c0 .c5 {
  padding-left: 20px;
}

.c0 .c1 {
  border-color: #9fecc0;
  background-color: #c3f3d8;
  color: #5cd78e;
}

.c0 .c6 {
  left: 100%;
  margin-left: -19px;
}

.c0 .c8 {
  background: #9fecc0;
}

.c0 .c5 {
  display: none;
}

.c10 .c6 {
  background-color: #fff;
  box-shadow: 0 0.5px 0.5px #c3cad9;
  border: 1px solid #c3cad9;
  width: 20px;
  height: 20px;
}

.c10 .c8 {
  background-color: #e69b9b;
  left: 13px;
  height: 10px;
}

.c10 .c1 {
  border: 1px solid #c3cad9;
  background-color: #ebedf0;
  color: #6b798e;
}

.c10 .c3,
.c10 .c5 {
  line-height: 16px;
}

.c10 .c3 {
  padding-right: 20px;
}

.c10 .c5 {
  padding-left: 20px;
}

.c10 .c3 {
  display: none;
}

.c11 .c6 {
  background-color: #fff;
  box-shadow: 0 0.5px 0.5px #c3cad9;
  border: 1px solid #c3cad9;
  width: 20px;
  height: 20px;
}

.c11 .c8 {
  background-color: #e69b9b;
  left: 13px;
  height: 10px;
}

.c11 .c1 {
  border: 1px solid #c3cad9;
  background-color: #ebedf0;
  color: #6b798e;
}

.c11 .c3,
.c11 .c5 {
  line-height: 16px;
}

.c11 .c3 {
  padding-right: 20px;
}

.c11 .c5 {
  padding-left: 20px;
}

.c11 .c3 {
  display: none;
}

.c11 .c1 {
  border-color: #f7f7f7;
  background-color: #f7f7f7;
}

.c11 .c8 {
  background-color: #f7f7f7;
}

.c12 .c6 {
  background-color: #fff;
  box-shadow: 0 0.5px 0.5px #c3cad9;
  border: 1px solid #c3cad9;
  width: 24px;
  height: 24px;
}

.c12 .c8 {
  background-color: #e69b9b;
  left: 13px;
  height: 14px;
}

.c12 .c1 {
  border: 1px solid #c3cad9;
  background-color: #ebedf0;
  color: #6b798e;
}

.c12 .c3,
.c12 .c5 {
  display: none;
}

.c12 .c3 {
  display: none;
}

.c13 .c6 {
  background-color: #fff;
  box-shadow: 0 0.5px 0.5px #c3cad9;
  border: 1px solid #c3cad9;
  width: 24px;
  height: 24px;
}

.c13 .c8 {
  background-color: #e69b9b;
  left: 18px;
  height: 14px;
}

.c13 .c1 {
  border: 1px solid #c3cad9;
  background-color: #ebedf0;
  color: #6b798e;
}

.c13 .c3 {
  padding-right: 26px;
}

.c13 .c5 {
  padding-left: 26px;
}

.c13 .c3 {
  display: none;
}

<div>
  <div
    class="demo-wrap"
  >
    <div
      checked=""
      class="c0"
    >
      <div
        class="c1 c2"
      >
        <span
          class="c3 c4"
        >
          ON
        </span>
        <span
          class="c5 c4"
        >
          OFF
        </span>
        <span
          class="c6 c7"
        >
          <span
            class="c8 c9"
          />
        </span>
      </div>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      checked=""
      class="c0"
    >
      <div
        class="c1 c2"
      >
        <span
          class="c3 c4"
        >
          ON
        </span>
        <span
          class="c5 c4"
        >
          OFF
        </span>
        <span
          class="c6 c7"
        >
          <span
            class="c8 c9"
          />
        </span>
      </div>
    </div>
  </div>
</div>
`;
